# Winkd

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  generate-icons.js  index.html  login.html  manifest.json  package.json  sw.js  tsconfig.base.json  turbo.json  winkd_website.html
apps/web/: app.html  index.html  login.html  manifest.json  package.json  react-core-gap-report.md  sw.js  tsconfig.json  vite.config.ts  winkd_website.html
apps/web/public/: sw.js
apps/web/public/emoji-packs/: README.md
apps/web/public/emoji-packs/spikey/: manifest.json
apps/web/src/: App.tsx  main.tsx
apps/web/src/components/: AeroWindow.tsx  AppErrorBoundary.tsx  ChatWindow.tsx  ContactItem.tsx  EmojiPicker.tsx  MessageBubble.tsx  ProfileEditModal.tsx  SecuritySettings.tsx  Sidebar.tsx  StatusBar.tsx  WinkdToolbar.tsx
apps/web/src/hooks/: useSocket.ts
apps/web/src/pages/: BuddyListPage.tsx  LoginPage.tsx
apps/web/src/stores/: authStore.ts  chatStore.ts  contactsStore.ts
apps/web/src/styles/: globals.css
docs/: MONETISATION.md
server/: Cargo.toml
server/migrations/: 001_init.sql  002_contacts.sql  003_user_profile.sql  004_avatar_colors.sql  005_pre_key_bundles.sql  006_totp_and_recovery.sql  007_multi_device.sql  008_audit_log.sql  009_blocks.sql  010_pending_messages.sql  011_supporter_tier.sql  012_buddy_slots_group_unlock.sql
server/src/: audit.rs  auth.rs  bmac.rs  config.rs  db.rs  error.rs  limits.rs  main.rs  presence.rs  protocol.rs  ratelimit.rs  router.rs  totp.rs
