[package]
name = "winkd-server"
version = "0.1.0"
edition = "2021"
description = "Winkd Messenger — WebSocket relay server"
license = "MIT"

[[bin]]
name = "winkd-server"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# HTTP (healthcheck + REST auth endpoints)
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
argon2 = "0.5"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Redis (presence, ephemeral sessions)
redis = { version = "0.26", features = ["tokio-comp"] }

# Env config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# OAuth
oauth2 = "4.4"
urlencoding = "2.1"

[dev-dependencies]
tokio-test = "0.4"
